--- a/src/Message.css
+++ b/src/Message.css
@@ -8,3 +8,9 @@ width: fit-content;
     color: white;
     text-align: left !important;
 }
+.message__userCard{
+    background-color: #0b81ff !important;
+}
+.message__guestCard{
+    background-color: #e9e9eb !important;
+}
