working on home page

--- a/style/style.css
+++ b/style/style.css
@@ -42,11 +42,79 @@ a{
     color: #fca311;
     font-size: 12px;
 }
-.menu-item li{
+.menu-item li, .social-icon li{
     list-style: none;
+    display: inline-block;
+    margin-left: 14px;
+    margin-right: 14px;
+}
+.menu-item, .social-icon{
     display: inline-block;
 }
-.social-icon li{
-    list-style: none;
-    display: inline-block;
+
+.menu-item li a{
+    font-size: 16px;
+    color: #f5f5f5;
+    font-weight: 500;
+}
+.social-icon li a i{
+    color: #f5f5f5;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+
+.menu button{
+    background: transparent;
+    color: white;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    padding-left: 40px;
+    padding-right: 40px;
+    font-size: 16px;
+    border: none;
+    border: 2px solid #fc5130;
+}
+.menu button:hover{
+    background: linear-gradient(60deg,#fc5130,#fca311);
+}
+
+
+
+/* banner styling */
+
+.banner-content{
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.read{
+    background: transparent;
+    color: white;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    padding-left: 40px;
+    padding-right: 40px;
+    font-size: 16px;
+    border: none;
+    border: 2px solid #fc5130;
+}
+
+.read:hover{
+    background: linear-gradient(60deg,#fc5130,#fca311);
+}
+
+.common{
+    background: linear-gradient(60deg,#fc5130,#fca311);
+    color: white;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    padding-left: 40px;
+    padding-right: 40px;
+    font-size: 16px;
+    border: none;
+    border: 2px solid #fca311;
 }
