--- a/style/signin.css
+++ b/style/signin.css
@@ -1,114 +1,116 @@
-
 * {
-    margin: 0;
-    padding: 0; 
+  margin: 0;
+  padding: 0;
 }
-.container{
-    width: 800px;
-    margin: 0 auto;
+.container {
+  width: 800px;
+  margin: 0 auto;
 }
 body {
-    background-image: url("https://images.unsplash.com/photo-1612538498613-35c5c8d675c4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8N3x8b2ZmJTIwd2hpdGV8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    height: 100vh;
-    justify-content: center;
-    font-family: 'Libre Franklin', sans-serif;
-  }
-
-  .form-box{
-      background-color: white;
-      height: 80vh;
-  }
-
-.bg-with-heading{
-    background-image: url("https://images.unsplash.com/photo-1581368976940-534956cab59b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDIwfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=600&q=60");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 20vh;
-    background-blend-mode:soft-light;
-    background-color: #28303b;
-}
-.center{
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 20vh;
-    color: white;
-}
-.username{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 40px;
-}
-.password{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 40px;
+  background-image: url("https://images.unsplash.com/photo-1612538498613-35c5c8d675c4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8N3x8b2ZmJTIwd2hpdGV8ZW58MHx8MHx8&auto=format&fit=crop&w=600&q=60");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  justify-content: center;
+  font-family: "Libre Franklin", sans-serif;
 }
 
-.password label{
-    color: #747474;
-    font-size: 16px;
-    padding: 4px; 
+.form-box {
+  background-color: white;
+  height: 80vh;
+  border-radius: 10px;
 }
-.username label{
-    color: #747474;
-    font-size: 16px;
-    padding: 4px;
+
+.bg-with-heading {
+  background-image: url("https://images.unsplash.com/photo-1581368976940-534956cab59b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDIwfHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=600&q=60");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 20vh;
+  background-blend-mode: soft-light;
+  background-color: #28303b;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
-.password input{
-    border: none;
+.center {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 20vh;
+  color: white;
+}
+.username {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
+}
+.password {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
+}
+
+.password label {
+  color: #747474;
+  font-size: 16px;
+  padding: 4px;
+}
+.username label {
+  color: #747474;
+  font-size: 16px;
+  padding: 4px;
+}
+.password input {
+  border: none;
   background: transparent;
   border-bottom: 1px solid #747474;
   padding: 4px;
   font-size: 16px;
   color: #747474;
   width: 400px;
- margin-bottom: 10px;
+  margin-bottom: 10px;
   outline: none;
   margin-left: 30px;
   margin-top: 10px;
 }
-.username input{
-border: none;
+.username input {
+  border: none;
   background: transparent;
   border-bottom: 1px solid #747474;
   padding: 4px;
   font-size: 16px;
   color: #747474;
   width: 400px;
- margin-bottom: 10px;
+  margin-bottom: 10px;
   outline: none;
   margin-left: 30px;
   margin-top: 10px;
 }
 
-.button-and-checkbox{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    margin-left: 100px;
-    margin-top: 20px;
-    color: #747474;
+.button-and-checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-left: 100px;
+  margin-top: 20px;
+  color: #747474;
 }
 
-.signinbutton{
-    margin-left: 250px;
-    margin-top: 20px;
+.signinbutton {
+  margin-left: 250px;
+  margin-top: 20px;
 }
-.signinbutton button{
-    padding: 15px 60px;
-    border: none;
-    background-color: #1bc029;
-    color: white;
-    cursor: pointer;
-    border-radius: 40px;
+.signinbutton button {
+  padding: 15px 60px;
+  border: none;
+  background-color: #1bc029;
+  color: white;
+  cursor: pointer;
+  border-radius: 40px;
 }
