--- a/style/image-landing-page.css
+++ b/style/image-landing-page.css
@@ -1,5 +1,38 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Readex+Pro:wght@300;400;500;600;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+a{
+    text-decoration: none;
+}
+
+body {
+  font-family: "Readex Pro", sans-serif;
+}
+header {
+  width: 100%;
+  padding: 30px 0px;
+}
+
+.container {
+  width: 1140px;
+  margin: 0 auto;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu ul li{
+    list-style: none;
+    display: inline-block;
+    line-height: 64px;
+    margin-left: 18px;
+}
+.menu ul li a{
+    font-weight: 400;
+    font-size: 16px;
 }
