--- a/style/gorgo.css
+++ b/style/gorgo.css
@@ -4,8 +4,8 @@
   padding: 0;
   box-sizing: border-box;
 }
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 
 body {
@@ -13,30 +13,185 @@ body {
 }
 
 header {
-    width: 100%;
-    padding: 10px 0px;
-    border-bottom: 2px solid #ddd;
-  }
-  
-  .container {
-    width: 1140px;
-    margin: 0 auto;
-  }
-  
-  .nav {
-    display: flex;
-    justify-content: space-between;
-  
-  }
-  
-  .menu ul li{
-      list-style: none;
-      display: inline-block;
-      line-height: 64px;
-      margin-left: 18px;
-  }
-  .menu ul li a{
-      font-weight: 400;
-      font-size: 16px;
-      color: #3d3d3d;
-  }
+  width: 100%;
+  padding: 10px 0px;
+}
+
+.container {
+  width: 1140px;
+  margin: 0 auto;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav-flex {
+  display: flex;
+  align-items: center;
+}
+
+.menu ul li {
+  list-style: none;
+  display: inline-block;
+  line-height: 64px;
+  margin-left: 18px;
+}
+.menu ul li a {
+  font-weight: 400;
+  font-size: 16px;
+  color: #3d3d3d;
+}
+
+.nav-btn {
+  background-color: #ff4141;
+  color: white;
+  padding: 10px 35px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* home styling started */
+
+.home {
+  margin-top: 100px;
+  margin-bottom: 300px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.home-content {
+  padding: 12px;
+}
+.home-content h1 {
+  padding-top: 6px;
+  font-size: 40px;
+}
+.home-content p {
+  padding-top: 6px;
+  color: #5f5f5f;
+  font-size: 16px;
+}
+.home-content i {
+  padding-top: 6px;
+  color: #5f5f5f;
+  font-size: 20px;
+}
+
+/* demo section styling */
+
+.demo {
+  text-align: center;
+}
+.demo h1 {
+  font-size: 30px;
+}
+.demo i {
+  font-size: 16px;
+  color: #5f5f5f;
+}
+
+.container-fluid {
+  width: 95%;
+  margin: 0 auto;
+}
+
+.demo-card {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+}
+.item-one img {
+  width: 100%;
+}
+.item-one p {
+  text-align: center;
+}
+.item-one {
+  padding-top: 40px;
+  margin: 0 20px;
+}
+
+/* line section start */
+
+.line {
+  border-left: 2px solid #3d3d3d;
+  height: 100px;
+  position: absolute;
+  left: 50%;
+}
+
+.line-position {
+  margin-top: 100px;
+  padding-bottom: 200px;
+}
+/* line section end */
+
+/* feature design start */
+
+.feature-content {
+  text-align: center;
+}
+.feature-content i {
+  color: #5f5f5f;
+  padding-top: 20px;
+}
+
+.all-feature {
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+.feature-one {
+  text-align: center;
+  resize: both;
+  background-color: #f0f0f0;
+  margin: 20px;
+  padding: 20px;
+  border-radius: 4px;
+}
+.feature-one h3 {
+  padding-top: 8px;
+}
+.feature-one p {
+  padding-top: 8px;
+  color: #5f5f5f;
+}
+.icon-design {
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  display: inline-block;
+  border-radius: 100%;
+  line-height: 50px;
+}
+.icon-design i {
+  color: #ff4141;
+}
+/* feature design end */
+
+/* gorgo footer section start */
+.gorgo-bg {
+  height: 50vh;
+  background-color: #272141;
+}
+.gorgo-content {
+  text-align: center;
+  padding: 70px 0;
+  margin-top: 40px;
+}
+.gorgo-content h1 {
+  font-size: 40px;
+  text-align: center;
+  color: white;
+}
+.gorgo-content button {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.gorgo-content span {
+  color: #5f5f5f;
+  font-size: 14px;
+}
+/* gorgo footer section end */
