--- a/style/outdoor.css
+++ b/style/outdoor.css
@@ -1,15 +1,16 @@
-@import url("https://fonts.googleapis.com/css2?family=Readex+Pro:wght@300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;500;600;700;800;900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+ 
 }
 a {
   text-decoration: none;
 }
 
 body {
-  font-family: "Readex Pro", sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 .container{
     width: 1140px;
@@ -18,6 +19,7 @@ body {
 header{
     width: 100%;
     padding: 15px 0px;
+    background: black;
 }
 
 .navbar{
@@ -28,3 +30,40 @@ header{
     display: inline-block;
     list-style: none;
 }
+.menus ul li a{
+    margin-right: 24px;
+    color: white;
+    font-weight: bold;
+}
+.menus{
+    display: flex;
+    align-items: center;
+}
+.menu-btn{
+    padding: 10px 20px;
+    border: 2px solid white;
+    background: transparent;
+    color: white;
+    font-weight: 600;
+    border-radius: 35px;
+    font-size: 13px;
+    cursor: pointer;
+}
+.logo h3{
+    color: white;
+    font-weight: bold;
+    font-size: 32px;
+}
+
+/* banner section start */
+.banner{
+    width: 100%;
+    background-image: url(../images/outdoor/outdoor.jpg);
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    background-blend-mode:saturation;
+    background-color: rgb(0, 0, 0,0.2);
+}
+/* banner section end */
