--- a/style/outdoor.css
+++ b/style/outdoor.css
@@ -66,4 +66,36 @@ header{
     background-blend-mode:saturation;
     background-color: rgb(0, 0, 0,0.2);
 }
+.banner-content{
+    text-align: center;
+}
+.banner-content h3{
+    color: white;
+    font-size: 32px;
+    font-style: italic;
+}
+.banner-content .line{
+    height: 3px;
+    width: 80px;
+    background: #fb2056;
+    margin: 10px auto;
+}
+.banner-content h1{
+    font-size: 60px;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+}
+.banner-content button{
+    padding: 20px 32px;
+    background: #fb2056;
+    border: none;
+    color: white;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 4px;
+    border-radius: 35px;
+    cursor: pointer;
+}
 /* banner section end */
