--- a/style/outdoor.css
+++ b/style/outdoor.css
@@ -19,7 +19,7 @@ body {
 header{
     width: 100%;
     padding: 15px 0px;
-    background: black;
+    position: absolute;
 }
 
 .navbar{
@@ -67,7 +67,12 @@ header{
     background-color: rgb(0, 0, 0,0.2);
 }
 .banner-content{
+    height: 100vh;
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
 }
 .banner-content h3{
     color: white;
@@ -85,6 +90,7 @@ header{
     text-transform: uppercase;
     color: white;
     letter-spacing: 1px;
+    margin-bottom: 20px;
 }
 .banner-content button{
     padding: 20px 32px;
