--- a/style/burger.css
+++ b/style/burger.css
@@ -355,5 +355,42 @@ font-family: "Alfa Slab One", cursive;  */
 /* footer section end */
 
 /* start slider page design */
-
+.events {
+  width: 100%;
+  padding: 60px 0;
+}
+.x-box {
+  padding: 16px 16px 12px 16px;
+  box-shadow: 5px 5px 10px rgb(0 0 0/10%);
+}
+.e-content {
+  display: flex;
+}
+.e-left {
+  flex-basis: 50%;
+  padding-top: 16px;
+}
+.e-right {
+  flex-basis: 50%;
+}
+.e-left h4 {
+  font-size: 30px;
+  color: var(--coffe);
+  font-family: "Bebas Neue", cursive;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 2px;
+}
+.e-left h2 {
+  font-family: "Alfa Slab One", cursive;
+  font-size: 38px;
+  letter-spacing: 1px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: var(--coffe);
+  margin-bottom: 30px;
+}
+/* font-family: "Montserrat", sans-serif;
+ font-family: "bebas Neue" ,cursive; 
+font-family: "Alfa Slab One", cursive;  */
 /* end slider page design */
