--- a/style/startup.css
+++ b/style/startup.css
@@ -18,6 +18,14 @@ a {
 
 font-family: 'Roboto', sans-serif; */
 /* banner styling :start */
+
+header {
+  width: 100%;
+}
+.nav-link {
+  font-family: "Mulish", sans-serif;
+  color: white !important;
+}
 .banner {
   width: 100%;
   height: 100vh;
@@ -60,6 +68,22 @@ font-family: 'Roboto', sans-serif; */
 }
 .banner-btn:hover {
   color: white;
+}
+.nav-item {
+  margin: 0 12px;
+}
+.hello {
+  font-family: "Mulish", sans-serif;
+  color: white !important;
+}
+.hello::before {
+  content: " ";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 4px;
+  width: 100%;
+  background-color: rebeccapurple;
 }
 /* banner styling :end */
 /* font-family: 'Mulish', sans-serif;
