working on services section

--- a/style/startup.css
+++ b/style/startup.css
@@ -89,3 +89,13 @@ header {
 /* font-family: 'Mulish', sans-serif;
 
 font-family: 'Roboto', sans-serif; */
+
+/* service section start */
+.services {
+  width: 100%;
+  padding: 120px 0px;
+}
+/* service section end */
+/* font-family: 'Mulish', sans-serif;
+
+font-family: 'Roboto', sans-serif; */
