--- a/style/startup.css
+++ b/style/startup.css
@@ -117,6 +117,33 @@ font-family: 'Roboto', sans-serif; */
   z-index: 0;
   padding-bottom: 15px;
 }
+
+.service-items {
+  margin-top: 60px;
+}
+.s-item {
+  padding: 48px 35px 45px 35px;
+  border: 2px solid #e8e8e8;
+  border-radius: 5px;
+}
+.s-item h4 {
+  font-family: "Roboto", sans-serif;
+  font-size: 24px;
+  color: var(--black);
+  margin-top: 29px;
+  margin-bottom: 13px;
+}
+.s-item p {
+  font-family: "Mulish", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+  margin-bottom: 0;
+}
+.s-item:hover {
+  border: 2px solid #615cfd;
+}
+
 /* service section end */
 /* font-family: 'Mulish', sans-serif;
 
