--- a/style/startup.css
+++ b/style/startup.css
@@ -145,6 +145,7 @@ font-family: 'Roboto', sans-serif; */
 }
 
 /* service section end */
+/* about section style start */
 .a-left {
   background-image: url(../images/startup/about.jpg);
   background-repeat: no-repeat;
@@ -204,9 +205,33 @@ font-family: 'Roboto', sans-serif; */
   border-radius: 30px;
 }
 
-/* about section style start */
-
 /* about section style end */
+
+/* featured section start */
+
+.f-work {
+  width: 100%;
+  padding: 100px 0px;
+}
+.section-title {
+  font-size: 40px;
+  line-height: 52px;
+  font-weight: 400;
+  color: var(--black);
+  position: relative;
+  z-index: 0;
+  padding-bottom: 15px;
+}
+.section-desc {
+  font-size: 16px;
+  color: #727272;
+  line-height: 28px;
+  margin-bottom: 0;
+  font-weight: 400;
+}
+
+/* featured section end */
+
 /* font-family: 'Mulish', sans-serif;
 
 font-family: 'Roboto', sans-serif; */
