--- a/style/startup.css
+++ b/style/startup.css
@@ -228,6 +228,7 @@ font-family: 'Roboto', sans-serif; */
   line-height: 28px;
   margin-bottom: 0;
   font-weight: 400;
+  margin: 0 100px;
 }
 
 /* featured section end */
