--- a/style/startup.css
+++ b/style/startup.css
@@ -230,6 +230,21 @@ font-family: 'Roboto', sans-serif; */
   font-weight: 400;
   margin: 0 100px;
 }
+.w-item {
+  position: relative;
+}
+.item-overlay {
+  background: white;
+  text-align: center;
+  position: absolute;
+  top: 6%;
+  left: 5%;
+  bottom: 6%;
+  right: 17%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 /* featured section end */
 
