--- a/style/startup.css
+++ b/style/startup.css
@@ -232,8 +232,10 @@ font-family: 'Roboto', sans-serif; */
 }
 .w-item {
   position: relative;
+  overflow: hidden;
 }
 .item-overlay {
+  opacity: 0;
   background: white;
   text-align: center;
   position: absolute;
@@ -245,9 +247,47 @@ font-family: 'Roboto', sans-serif; */
   justify-content: center;
   align-items: center;
 }
+.item-overlay a {
+  background: var(--blue);
+  color: #fff;
+  display: inline-block;
+  padding: 12px 33px;
+  font-size: 16px;
+  border: 1px solid transparent;
+  border-radius: 30px;
+  text-align: center;
+  color: #fff !important;
+  text-transform: capitalize;
+  transition: 0.5s;
+  cursor: pointer;
+}
+.item-overlay a:hover {
+  background-color: transparent !important;
+  color: var(--blue) !important;
+  border: 1px solid var(--blue);
+}
+.item-overlay h6 {
+  font-size: 14px;
+  color: var(--blue);
+  font-weight: 400;
+  font-family: "Roboto", sans-serif;
+}
+.w-item:hover .item-overlay {
+  opacity: 1 !important;
+  top: 0%;
+  left: 0%;
+  bottom: 0%;
+  right: 0%;
+  transition: 0.5s ease-in-out;
+}
 
+.container {
+  width: 1140px !important;
+}
 /* featured section end */
 
-/* font-family: 'Mulish', sans-serif;
+/* 
+font-family: 'Mulish', sans-serif;
 
-font-family: 'Roboto', sans-serif; */
+font-family: 'Roboto', sans-serif;
+ */
