--- a/style/startup.css
+++ b/style/startup.css
@@ -364,6 +364,35 @@ font-family: 'Roboto', sans-serif; */
 }
 /* team section end here */
 
+/* slider section start here */
+
+.slider {
+  margin-top: 60px;
+  height: 70vh;
+  background: url(../images/startup/formal1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: overlay;
+  background-color: #454645;
+}
+.slider-img img {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+}
+.slider h4 {
+  font-family: "Mulish", sans-serif;
+}
+.slider-img {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* slider section end here */
+
 /* contact start  */
 .contact {
   margin: 100px 0;
@@ -384,6 +413,24 @@ form textarea {
   width: 100%;
 }
 /* contact end  */
+
+/* footer section start */
+
+.footer-icon i {
+  height: 40px;
+  width: 40px;
+  line-height: 40px;
+  background-color: black;
+  border: 1px solid #fff;
+  border-radius: 100%;
+  text-align: center;
+}
+.color {
+  color: var(--blue);
+  margin-left: 4px;
+}
+/* footer section end */
+
 /* 
 font-family: 'Mulish', sans-serif;
 
